dh-2 add protcol. gamecontroller owned by mainviewcontroller.
controller will no longer be the main view.  it is a part of the MainViewController as a subView;
protocol gives the allocator of the GameController many methods to help customize button experience.

todo: handle condition of the delegate not implementing protocol methods

--- a/Tean_Tytans/GameControllerStoryboard.storyboard
+++ b/Tean_Tytans/GameControllerStoryboard.storyboard
@@ -41,14 +41,16 @@
                                     <action selector="arrowRightRelease:" destination="zWE-GQ-RWd" eventType="touchUpInside" id="ugo-qq-KW8"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" alpha="0.49999999999999994" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="v5q-bI-d0U" userLabel="Button - action">
+                            <button opaque="NO" alpha="0.49999999999999994" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="v5q-bI-d0U" userLabel="Button - action">
                                 <rect key="frame" x="91" y="0.0" width="386" height="320"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <gestureRecognizers/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="M80-xb-3MA" appends="YES" id="wby-Ma-Bwh"/>
@@ -66,21 +68,21 @@
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yHr-eT-Lcc" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <rotationGestureRecognizer id="M80-xb-3MA">
-                    <connections>
-                        <action selector="actionSpecialRotate:" destination="zWE-GQ-RWd" id="UWJ-Gu-hrl"/>
-                    </connections>
-                </rotationGestureRecognizer>
-                <pinchGestureRecognizer id="JZu-ih-jtM">
-                    <connections>
-                        <action selector="actionGrabPinch:" destination="zWE-GQ-RWd" id="Za5-JM-a0Z"/>
-                    </connections>
-                </pinchGestureRecognizer>
                 <tapGestureRecognizer id="8Gy-8M-LVW">
                     <connections>
                         <action selector="actionAttackTapped:" destination="zWE-GQ-RWd" id="AdP-MH-vEM"/>
                     </connections>
                 </tapGestureRecognizer>
+                <pinchGestureRecognizer id="JZu-ih-jtM">
+                    <connections>
+                        <action selector="actionGrabPinch:" destination="zWE-GQ-RWd" id="Za5-JM-a0Z"/>
+                    </connections>
+                </pinchGestureRecognizer>
+                <rotationGestureRecognizer id="M80-xb-3MA">
+                    <connections>
+                        <action selector="actionSpecialRotate:" destination="zWE-GQ-RWd" id="UWJ-Gu-hrl"/>
+                    </connections>
+                </rotationGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="253" y="99"/>
         </scene>
