--- a/Tean_Tytans/GameControllerStoryboard.storyboard
+++ b/Tean_Tytans/GameControllerStoryboard.storyboard
@@ -15,7 +15,7 @@
                         <subviews>
                             <button opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="wqf-TH-H2r" userLabel="Button -arrowLeft">
                                 <rect key="frame" x="0.0" y="0.0" width="91" height="320"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" image="arrowLeft.png">
@@ -29,7 +29,7 @@
                             </button>
                             <button opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ITc-05-N8h" userLabel="Button -arrowRight">
                                 <rect key="frame" x="477" y="0.0" width="91" height="320"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" image="arrowRight.png">
@@ -71,16 +71,19 @@
                 <tapGestureRecognizer id="8Gy-8M-LVW">
                     <connections>
                         <action selector="actionAttackTapped:" destination="zWE-GQ-RWd" id="AdP-MH-vEM"/>
+                        <outlet property="delegate" destination="zWE-GQ-RWd" id="qZ7-cP-ced"/>
                     </connections>
                 </tapGestureRecognizer>
                 <pinchGestureRecognizer id="JZu-ih-jtM">
                     <connections>
                         <action selector="actionGrabPinch:" destination="zWE-GQ-RWd" id="Za5-JM-a0Z"/>
+                        <outlet property="delegate" destination="zWE-GQ-RWd" id="Lnc-3P-QKB"/>
                     </connections>
                 </pinchGestureRecognizer>
                 <rotationGestureRecognizer id="M80-xb-3MA">
                     <connections>
                         <action selector="actionSpecialRotate:" destination="zWE-GQ-RWd" id="UWJ-Gu-hrl"/>
+                        <outlet property="delegate" destination="zWE-GQ-RWd" id="pC8-wp-Ntx"/>
                     </connections>
                 </rotationGestureRecognizer>
             </objects>
