--- a/Tean_Tytans/GameControllerStoryboard.storyboard
+++ b/Tean_Tytans/GameControllerStoryboard.storyboard
@@ -13,6 +13,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" id="qYE-RI-kGX" userLabel="Button -action">
+                                <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="8Gy-8M-LVW" appends="YES" id="U07-V1-uFU"/>
+                                    <outletCollection property="gestureRecognizers" destination="JZu-ih-jtM" appends="YES" id="xfL-Kd-Db0"/>
+                                    <outletCollection property="gestureRecognizers" destination="M80-xb-3MA" appends="YES" id="F1y-Oc-BEw"/>
+                                    <outletCollection property="gestureRecognizers" destination="vAO-7K-w9y" appends="YES" id="W2f-FS-IEc"/>
+                                </connections>
+                            </view>
                             <button opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="wqf-TH-H2r" userLabel="Button -arrowLeft">
                                 <rect key="frame" x="0.0" y="270" width="91" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" heightSizable="YES"/>
@@ -53,12 +64,6 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="8Gy-8M-LVW" appends="YES" id="5CI-Di-G2B"/>
-                            <outletCollection property="gestureRecognizers" destination="JZu-ih-jtM" appends="YES" id="Wzl-M7-ob0"/>
-                            <outletCollection property="gestureRecognizers" destination="M80-xb-3MA" appends="YES" id="ao1-Lr-33g"/>
-                            <outletCollection property="gestureRecognizers" destination="vAO-7K-w9y" appends="YES" id="dx1-ev-hmb"/>
-                        </connections>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
                     <nil key="simulatedTopBarMetrics"/>
@@ -69,25 +74,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yHr-eT-Lcc" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="8Gy-8M-LVW">
                     <connections>
-                        <action selector="actionAttackTapped:" destination="zWE-GQ-RWd" id="AdP-MH-vEM"/>
+                        <action selector="actionAttackTapped:" destination="zWE-GQ-RWd" id="1fl-Kn-uvB"/>
                         <outlet property="delegate" destination="zWE-GQ-RWd" id="qZ7-cP-ced"/>
                     </connections>
                 </tapGestureRecognizer>
                 <pinchGestureRecognizer id="JZu-ih-jtM">
                     <connections>
-                        <action selector="actionGrabPinch:" destination="zWE-GQ-RWd" id="Za5-JM-a0Z"/>
+                        <action selector="actionGrabPinch:" destination="zWE-GQ-RWd" id="Q2X-wS-3aP"/>
                         <outlet property="delegate" destination="zWE-GQ-RWd" id="nOk-Ds-I0L"/>
                     </connections>
                 </pinchGestureRecognizer>
                 <rotationGestureRecognizer id="M80-xb-3MA">
                     <connections>
-                        <action selector="actionSpecialRotate:" destination="zWE-GQ-RWd" id="UWJ-Gu-hrl"/>
+                        <action selector="actionSpecialRotate:" destination="zWE-GQ-RWd" id="bwT-d3-RM1"/>
                         <outlet property="delegate" destination="zWE-GQ-RWd" id="pC8-wp-Ntx"/>
                     </connections>
                 </rotationGestureRecognizer>
                 <swipeGestureRecognizer direction="right" id="vAO-7K-w9y">
                     <connections>
-                        <action selector="actionSwipe:" destination="zWE-GQ-RWd" id="ygT-tS-86q"/>
+                        <action selector="actionSwipe:" destination="zWE-GQ-RWd" id="fV3-v7-Bnu"/>
                         <outlet property="delegate" destination="zWE-GQ-RWd" id="4o7-WN-CLR"/>
                     </connections>
                 </swipeGestureRecognizer>
@@ -106,7 +111,7 @@
                                 <rect key="frame" x="5" y="5" width="70" height="70"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" heightSizable="YES"/>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" selectable="NO" id="cQy-tt-Nbb" userLabel="Text View -dialog">
+                            <textView clipsSubviews="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" selectable="NO" id="cQy-tt-Nbb" userLabel="Text View -dialog" customClass="TTDialogTextView">
                                 <rect key="frame" x="80" y="5" width="197" height="70"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -114,10 +119,14 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                             </textView>
-                            <view alpha="0.0" contentMode="scaleToFill" id="iFh-at-bEI" userLabel="gesture interface">
+                            <view contentMode="scaleToFill" id="iFh-at-bEI" userLabel="gesture interface">
                                 <rect key="frame" x="0.0" y="0.0" width="282" height="80"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="etR-VQ-GvJ" appends="YES" id="Yrt-IM-Tgc"/>
+                                </connections>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.50196081399917603" blue="1" alpha="0.66000000000000003" colorSpace="calibratedRGB"/>
@@ -130,6 +139,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Vo-bL-B1q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="etR-VQ-GvJ">
+                    <connections>
+                        <action selector="tappedDialogView:" destination="R6E-SZ-xJn" id="8u8-Qk-vYF"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="774" y="219"/>
         </scene>
