--- a/Tean_Tytans/GameControllerStoryboard.storyboard
+++ b/Tean_Tytans/GameControllerStoryboard.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4488.2" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="zWE-GQ-RWd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="zWE-GQ-RWd">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3715.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
         <!--Game Controller View Controller - GameController-->
@@ -144,9 +144,9 @@
     </scenes>
     <resources>
         <image name="TeenTitansTogether.png" width="280" height="195"/>
-        <image name="arrowLeft.png" width="33.746482849121094" height="27.747108459472656"/>
+        <image name="arrowLeft.png" width="45" height="37"/>
         <image name="arrowLeftSelected.png" width="24" height="24"/>
-        <image name="arrowRight.png" width="33.746482849121094" height="27.747108459472656"/>
+        <image name="arrowRight.png" width="45" height="37"/>
         <image name="arrowRightSelected.png" width="24" height="24"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
